Correct main navigation container wrapping

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -27,6 +27,7 @@ body {
 
 .main-nav {
   display: flex;
+  flex-wrap: wrap;
   list-style: none;
   gap: 4px;
   padding: 0;
